<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_age_group">

            <ImageButton
                android:id="@+id/ibArrowBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/arrow_back_age_group" />

            <TextView
                android:id="@+id/escolhaFaixaEtaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_one_regular"
                android:gravity="center"
                android:shadowColor="@color/shadow_text_welcome"
                android:text="@string/escolha_sua_faixa_etaria"
                android:textColor="@color/arrow_back_age_group"
                android:textSize="@dimen/body_4"
                app:layout_constraintStart_toEndOf="@+id/ibArrowBack"
                app:layout_constraintTop_toBottomOf="@+id/ibArrowBack" />

            <ImageView
                android:id="@+id/babysStartGame"
                android:layout_width="261dp"
                android:layout_height="269dp"
                android:adjustViewBounds="true"
                android:elevation="1dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_babys"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/escolhaFaixaEtaria" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn2a5anos"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/arrow_back_age_group"
                app:cardCornerRadius="30dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="@+id/babysStartGame"
                app:layout_constraintStart_toStartOf="@+id/babysStartGame"
                app:layout_constraintTop_toBottomOf="@+id/babysStartGame">

                <TextView
                    android:id="@+id/tv2a5anos"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/fredoka_one_regular"
                    android:gravity="center"
                    android:text="@string/_2_a_5_anos"
                    android:textColor="@color/white"
                    android:textSize="@dimen/body_4" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/ou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_one_regular"
                android:gravity="center"
                android:shadowColor="@color/shadow_text_welcome"
                android:text="@string/ou"
                android:textColor="@color/arrow_back_age_group"
                android:textSize="@dimen/body_4"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="@+id/btn2a5anos"
                app:layout_constraintStart_toStartOf="@+id/btn2a5anos"
                app:layout_constraintTop_toBottomOf="@+id/btn2a5anos" />

            <ImageView
                android:id="@+id/criancasStartGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:elevation="1dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_criancas_age_group"
                app:layout_constraintEnd_toEndOf="@+id/babysStartGame"
                app:layout_constraintStart_toStartOf="@+id/babysStartGame"
                app:layout_constraintTop_toBottomOf="@+id/ou" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn6ouMais"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/arrow_back_age_group"
                app:cardCornerRadius="30dp"
                app:cardElevation="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/criancasStartGame"
                app:layout_constraintStart_toStartOf="@id/criancasStartGame"
                app:layout_constraintTop_toBottomOf="@id/criancasStartGame"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/tv6ouMais"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/fredoka_one_regular"
                    android:gravity="center"
                    android:text="@string/_6_anos_ou_mais"
                    android:textColor="@color/white"
                    android:textSize="@dimen/body_4" />
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>